adding product name filter

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -4,3 +4,4 @@ productQuantity=Quantity
 productBranch=Branch
 productUnit=Unit number
 productCaducity=Caducity date
+productNameFilter=Product name filter
