--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -4,3 +4,4 @@ productQuantity=Cantidad
 productBranch=Marca
 productUnit=Nº de unidades
 productCaducity=Fecha de caducidad
+productNameFilter=Filtrar por nombre de producto
