Adding Formatter(not working yet), Router(navigation pattern), Home(mvc) and ProductList(mvc)

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,10 @@
+appTitle=Be Ve
+appDescription=open sap application
 title=Be Ve
-appTitle=App
-appDescription=App Description
+productName=Product name
+productQuantity=Quantity
+productBranch=Branch
+productUnit=Unit number
+productCaducity=Caducity date
+productType=Type
+productNameFilter=Product name filter
