--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -4,4 +4,5 @@ productQuantity=Quantity
 productBranch=Branch
 productUnit=Unit number
 productCaducity=Caducity date
+productType=Type
 productNameFilter=Product name filter
