--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -4,4 +4,5 @@ productQuantity=Cantidad
 productBranch=Marca
 productUnit=Nº de unidades
 productCaducity=Fecha de caducidad
+productType=Tipo
 productNameFilter=Filtrar por nombre de producto
