Login form updated

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,10 +1,29 @@
+#Page
 appTitle=Be Ve
 appDescription=open sap application
 title=Be Ve
+
+#Login
+userInput=User ID
+passwordInput=Password
+submitButton=Login
+messageToast=Please fill the form
+loginFail=Your User ID or your password are not correct.\nPlease try again.
+
+#Product table columns
+addProductButton=Add Product
+productsListTitle=Products list
 productName=Product name
 productQuantity=Quantity
 productBranch=Branch
-productUnit=Unit number
+productPrice=Price/Kg
 productCaducity=Caducity date
 productType=Type
+
+#Product table filters
 productNameFilter=Product name filter
+
+#Footer
+footerTitle=Be ve ~ Product Management
+footerLogin=Login
+footerProducts=Products List
