--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -1,8 +1,26 @@
+#Page
+appTitle=Be Ve
+appDescription=aplicación open sap
 title=Be Ve
+
+#Login
+userInput=ID de usuario
+passwordInput=Contraseña
+submitButton=Iniciar sesión
+
+#PRoducts table columns
+addProductButton=Añadir Producto
 productName=Nombre de producto
 productQuantity=Cantidad
 productBranch=Marca
-productUnit=Nº de unidades
+productPrice=Precio/Kg
 productCaducity=Fecha de caducidad
 productType=Tipo
+
+#Product table filters
 productNameFilter=Filtrar por nombre de producto
+
+#Footer
+footerTitle=Be ve ~ Gestión de productos
+footerLogin=Iniciar sesión
+footerProducts=Lista de productos
