--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,8 +1,26 @@
+#Page
+appTitle=Be Ve
+appDescription=open sap application
 title=Be Ve
+
+#Login
+userInput=User ID
+passwordInput=Password
+submitButton=Login
+
+#Product table columns
+addProductButton=Add Product
 productName=Product name
 productQuantity=Quantity
 productBranch=Branch
-productUnit=Unit number
+productPrice=Price/Kg
 productCaducity=Caducity date
 productType=Type
+
+#Product table filters
 productNameFilter=Product name filter
+
+#Footer
+footerTitle=Be ve ~ Product Management
+footerLogin=Login
+footerProducts=Products List
