--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,6 +12,7 @@ loginFail=Your User ID or your password are not correct.\nPlease try again.
 
 #Product table columns
 addProductButton=Add Product
+addProductPopoverButton=Add
 productsListTitle=Products list
 productName=Product name
 productQuantity=Quantity
@@ -22,6 +23,7 @@ productType=Type
 
 #Product table filters
 productNameFilter=Product name filter
+productTypeFilter=Product type filter
 
 #Footer
 footerTitle=Be ve ~ Product Management
