--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -10,6 +10,7 @@ submitButton=Login
 
 #Product table columns
 addProductButton=Add Product
+addProductPopoverButton=Add
 productName=Product name
 productQuantity=Quantity
 productBranch=Branch
@@ -19,6 +20,7 @@ productType=Type
 
 #Product table filters
 productNameFilter=Product name filter
+productTypeFilter=Product type filter
 
 #Footer
 footerTitle=Be ve ~ Product Management
