--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -10,6 +10,7 @@ submitButton=Iniciar sesión
 
 #PRoducts table columns
 addProductButton=Añadir Producto
+addProductPopoverButton=Añadir
 productName=Nombre de producto
 productQuantity=Cantidad
 productBranch=Marca
@@ -19,6 +20,7 @@ productType=Tipo
 
 #Product table filters
 productNameFilter=Filtrar por nombre de producto
+productTypeFilter=Filtrar por tipo de producto
 
 #Footer
 footerTitle=Be ve ~ Gestión de productos
