Defining detail view

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -13,14 +13,19 @@ addProductButton=Add Product
 addProductPopoverButton=Add
 productName=Product name
 productQuantity=Quantity
-productBranch=Branch
-productPrice=Price/Kg
+productSupplier=Supplier
+productPrice=Price per kg
 productCaducity=Caducity date
 productType=Type
+productImageUrl=Product image url
 
 #Product table filters
 productNameFilter=Product name filter
 productTypeFilter=Product type filter
+
+#Detail Product view
+iconTabFilterSupplier=Supplier
+iconTabFilterCategory=Category
 
 #Footer
 footerTitle=Be ve ~ Product Management
