--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -13,14 +13,19 @@ addProductButton=Añadir Producto
 addProductPopoverButton=Añadir
 productName=Nombre de producto
 productQuantity=Cantidad
-productBranch=Marca
-productPrice=Precio/Kg
+productSupplier=Proveedor
+productPriceKg=Precio por kg
 productCaducity=Fecha de caducidad
 productType=Tipo
+productImageUrl=Url de la foto del producto
 
 #Product table filters
 productNameFilter=Filtrar por nombre de producto
 productTypeFilter=Filtrar por tipo de producto
+
+#Detail Product view
+iconTabFilterSupplier=Proveedor
+iconTabFilterCategory=Categoría
 
 #Footer
 footerTitle=Be ve ~ Gestión de productos
