--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -16,14 +16,19 @@ addProductPopoverButton=Add
 productsListTitle=Products list
 productName=Product name
 productQuantity=Quantity
-productBranch=Branch
-productPrice=Price/Kg
+productSupplier=Supplier
+productPriceKg=Price per kg
 productCaducity=Caducity date
 productType=Type
+productImageUrl=Product image url
 
 #Product table filters
 productNameFilter=Product name filter
 productTypeFilter=Product type filter
+
+#Detail Product view
+iconTabFilterSupplier=Supplier
+iconTabFilterCategory=Category
 
 #Footer
 footerTitle=Be ve ~ Product Management
