Changing detail view and fixing the adding product dialog

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,8 +11,10 @@ messageToast=Please fill the form
 loginFail=Your User ID or your password are not correct.\nPlease try again.
 
 #Product table columns
+addProductsDialogTitle=Add Product
 addProductButton=Add Product
 addProductPopoverButton=Add
+cancelPopoverButton=Cancel
 productsListTitle=Products list
 productName=Product name
 productQuantity=Quantity
@@ -29,6 +31,8 @@ productTypeFilter=Product type filter
 #Detail Product view
 iconTabFilterSupplier=Supplier
 iconTabFilterCategory=Category
+supplierContactTitle=Contact
+supplierAddressTitle=Address
 
 #Footer
 footerTitle=Be ve ~ Product Management
