--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -9,8 +9,10 @@ passwordInput=Password
 submitButton=Login
 
 #Product table columns
+addProductsDialogTitle=Add Product
 addProductButton=Add Product
 addProductPopoverButton=Add
+cancelPopoverButton=Cancel
 productName=Product name
 productQuantity=Quantity
 productSupplier=Supplier
@@ -26,6 +28,8 @@ productTypeFilter=Product type filter
 #Detail Product view
 iconTabFilterSupplier=Supplier
 iconTabFilterCategory=Category
+supplierContactTitle=Contact
+supplierAddressTitle=Address
 
 #Footer
 footerTitle=Be ve ~ Product Management
