--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -9,8 +9,10 @@ passwordInput=Contraseña
 submitButton=Iniciar sesión
 
 #PRoducts table columns
+addProductsDialogTitle=Añadir Producto
 addProductButton=Añadir Producto
 addProductPopoverButton=Añadir
+cancelPopoverButton=Cancelar
 productName=Nombre de producto
 productQuantity=Cantidad
 productSupplier=Proveedor
@@ -26,6 +28,8 @@ productTypeFilter=Filtrar por tipo de producto
 #Detail Product view
 iconTabFilterSupplier=Proveedor
 iconTabFilterCategory=Categoría
+supplierContactTitle=Contacto
+supplierAddressTitle=Dirección
 
 #Footer
 footerTitle=Be ve ~ Gestión de productos
