--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -1,7 +1,7 @@
 #Page
-appTitle=Be Ve
+appTitle=Gestión de Productos
 appDescription=aplicación open sap
-title=Be Ve
+title=Gestión de Productos
 
 #Login
 userInput=ID de usuario
@@ -27,11 +27,15 @@ productTypeFilter=Filtrar por tipo de producto
 
 #Detail Product view
 iconTabFilterSupplier=Proveedor
-iconTabFilterCategory=Categoría
+iconTabFilterSales=Ventas
 supplierContactTitle=Contacto
 supplierAddressTitle=Dirección
+SalesRevenue= Ingresos por ventas
+SalesRevenueSubtitle=Ingresos por ventas este mes
+
 
 #Footer
-footerTitle=Be ve ~ Gestión de productos
-footerLogin=Iniciar sesión
-footerProducts=Lista de productos
+footerTitle=Gestión de Productos
+footerLogin=Iniciar Sesión
+footerProductsList=Lista de Productos
+footerProductsDetail=Detalle de Producto
