--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,7 +1,7 @@
 #Page
-appTitle=Be Ve
+appTitle=Products Management
 appDescription=open sap application
-title=Be Ve
+title=Products Management
 
 #Login
 userInput=User ID
@@ -27,11 +27,14 @@ productTypeFilter=Product type filter
 
 #Detail Product view
 iconTabFilterSupplier=Supplier
-iconTabFilterCategory=Category
+iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
+SalesRevenue=Sales revenue
+SalesRevenueSubtitle=Sales revenue in this month
 
 #Footer
-footerTitle=Be ve ~ Product Management
+footerTitle=Products Management
 footerLogin=Login
-footerProducts=Products List
+footerProductsList=Products List
+footerProductsDetail=Product Detail
