SideNavigation removed, set Icon instead (because it´s going to be used just to navigate back. Also updated the add products dialog, with supplier form added)

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,32 +10,41 @@ submitButton=Login
 messageToast=Please fill the form
 loginFail=Your User ID or your password are not correct.\nPlease try again.
 
-#Product table columns
+#Products table 
 addProductsDialogTitle=Add Product
 addProductButton=Add Product
 addProductPopoverButton=Add
 cancelPopoverButton=Cancel
 productsListTitle=Products list
-productName=Product name
+
+#Products table filters
+productNameFilter=Product name filter
+productTypeFilter=Product type filter
+
+#Add products fragment
+productName=Name
 productQuantity=Quantity
 productSupplier=Supplier
 productPriceKg=Price per kg
 productCaducity=Caducity date
 productType=Type
 productImageUrl=Product image url
+vendorName=Name
+vendorCity=City
+vendorCountry=Country
+vendorStreet=Street
+vendorTelephone=Telephone
+vendorMobile=Mobile
+vendorEmail=E-mail
+vendorZipCode=Zip-Code
+iconTabFilterAddProduct=Product Information
+iconTabFilterAddSupplier=Supplier Information
 
-#Product table filters
-productNameFilter=Product name filter
-productTypeFilter=Product type filter
-
-#Detail Product view
+#Detail product view
 iconTabFilterSupplier=Supplier
 iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
-SalesRevenue= Sales revenue
-SalesRevenueSubtitle=Sales revenue in this month
-
 
 #Footer
 footerTitle=Products Management
