--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -7,31 +7,44 @@ title=Products Management
 userInput=User ID
 passwordInput=Password
 submitButton=Login
+messageToast=Please fill the form
+loginFail=Your User ID or your password are not correct.\nPlease try again.
 
-#Product table columns
+#Products table 
 addProductsDialogTitle=Add Product
 addProductButton=Add Product
 addProductPopoverButton=Add
 cancelPopoverButton=Cancel
-productName=Product name
-productQuantity=Quantity
-productSupplier=Supplier
-productPrice=Price per kg
-productCaducity=Caducity date
-productType=Type
-productImageUrl=Product image url
+productsListTitle=Products list
 
-#Product table filters
+#Products table filters
 productNameFilter=Product name filter
 productTypeFilter=Product type filter
 
-#Detail Product view
+#Add products fragment
+productName=Name
+productQuantity=Quantity
+productSupplier=Supplier
+productPriceKg=Price per kg
+productCaducity=Caducity date
+productType=Type
+productImageUrl=Product image url
+vendorName=Name
+vendorCity=City
+vendorCountry=Country
+vendorStreet=Street
+vendorTelephone=Telephone
+vendorMobile=Mobile
+vendorEmail=E-mail
+vendorZipCode=Zip-Code
+iconTabFilterAddProduct=Product Information
+iconTabFilterAddSupplier=Supplier Information
+
+#Detail product view
 iconTabFilterSupplier=Supplier
 iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
-SalesRevenue=Sales revenue
-SalesRevenueSubtitle=Sales revenue in this month
 
 #Footer
 footerTitle=Products Management
