--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -8,31 +8,41 @@ userInput=ID de usuario
 passwordInput=Contraseña
 submitButton=Iniciar sesión
 
-#PRoducts table columns
+#Products table 
 addProductsDialogTitle=Añadir Producto
 addProductButton=Añadir Producto
 addProductPopoverButton=Añadir
 cancelPopoverButton=Cancelar
-productName=Nombre de producto
+productsListTitle=Lista de Productos
+
+#Products table filters
+productNameFilter=Filtrar por nombre de producto
+productTypeFilter=Filtrar por tipo de producto
+
+#Add products fragment
+productName=Nombre
 productQuantity=Cantidad
 productSupplier=Proveedor
 productPriceKg=Precio por kg
 productCaducity=Fecha de caducidad
 productType=Tipo
 productImageUrl=Url de la foto del producto
+vendorName=Nombre
+vendorCity=Ciudad
+vendorCountry=País
+vendorStreet=Calle
+vendorTelephone=Teléfono fijo
+vendorMobile=Teléfono móvil
+vendorEmail=E-mail
+vendorZipCode=Código Postal
+iconTabFilterAddProduct=Información del Producto
+iconTabFilterAddSupplier=Información del Proveedor
 
-#Product table filters
-productNameFilter=Filtrar por nombre de producto
-productTypeFilter=Filtrar por tipo de producto
-
-#Detail Product view
+#Detail product view
 iconTabFilterSupplier=Proveedor
 iconTabFilterSales=Ventas
 supplierContactTitle=Contacto
 supplierAddressTitle=Dirección
-SalesRevenue= Ingresos por ventas
-SalesRevenueSubtitle=Ingresos por ventas este mes
-
 
 #Footer
 footerTitle=Gestión de Productos
