Constants file created in util folder. Added filter icons to the columns

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,13 +1,13 @@
 #Page
 appTitle=Products Management
-appDescription=open sap application
+appDescription=OPEN SAP Application
 title=Products Management
 
 #Login
 userInput=User ID
 passwordInput=Password
 submitButton=Login
-messageToast=Please fill the form
+messageToast=Fill the form
 loginFail=Your User ID or your password are not correct.\nPlease try again.
 
 #Products table 
@@ -15,7 +15,8 @@ addProductsDialogTitle=Add Product
 addProductButton=Add Product
 addProductPopoverButton=Add
 cancelPopoverButton=Cancel
-productsListTitle=Products list
+productsListTitle=Products List
+noDataText=There are not predefined products
 
 #Products table filters
 productNameFilter=Product name filter
@@ -25,10 +26,10 @@ productTypeFilter=Product type filter
 productName=Name
 productQuantity=Quantity
 productSupplier=Supplier
-productPriceKg=Price per kg
-productCaducity=Caducity date
+productPriceKg=Price per Kg
+productCaducity=Caducity Date
 productType=Type
-productImageUrl=Product image url
+productImageUrl=Product Image Url
 vendorName=Name
 vendorCity=City
 vendorCountry=Country
@@ -45,6 +46,7 @@ iconTabFilterSupplier=Supplier
 iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
+graphHeader=Settings
 
 #Footer
 footerTitle=Products Management
