--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -14,6 +14,7 @@ addProductButton=Añadir Producto
 addProductPopoverButton=Añadir
 cancelPopoverButton=Cancelar
 productsListTitle=Lista de Productos
+noDataText=No hay productos predefinidos
 
 #Products table filters
 productNameFilter=Filtrar por nombre de producto
@@ -43,6 +44,7 @@ iconTabFilterSupplier=Proveedor
 iconTabFilterSales=Ventas
 supplierContactTitle=Contacto
 supplierAddressTitle=Dirección
+graphHeader=Configuración
 
 #Footer
 footerTitle=Gestión de Productos
