Product list filter popover working. Some styles fixed

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,6 +13,9 @@ loginFail=Your User ID or your password are not correct.\nPlease try again.
 #Products table 
 addProductsDialogTitle=Add Product
 addProductButton=Add Product
+addProductTooltip=ADD PRODUCT
+clearFiltersButton=Clear filters
+clearFiltersTooltip=CLEAR FILTERS
 addProductPopoverButton=Add
 cancelPopoverButton=Cancel
 productsListTitle=Products List
