--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -11,6 +11,9 @@ submitButton=Iniciar sesión
 #Products table 
 addProductsDialogTitle=Añadir Producto
 addProductButton=Añadir Producto
+addProductTooltip=AÑADIR PRODUCTO
+clearFiltersButton=Limpiar filtros
+clearFiltersTooltip=LIMPIAR FILTROS
 addProductPopoverButton=Añadir
 cancelPopoverButton=Cancelar
 productsListTitle=Lista de Productos
