--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -48,6 +48,7 @@ iconTabFilterSales=Ventas
 supplierContactTitle=Contacto
 supplierAddressTitle=Dirección
 graphHeader=Configuración
+homeIconTooltip=Click para navegar hacia atrás
 
 #Footer
 footerTitle=Gestión de Productos
