--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -50,6 +50,7 @@ iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
 graphHeader=Settings
+homeIconTooltip=Click to go back
 
 #Footer
 footerTitle=Products Management
