Column filters working properly, added a main view to enter to the app and vendor data of new product properly binded

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,12 +3,9 @@ appTitle=Products Management
 appDescription=OPEN SAP Application
 title=Products Management
 
-#Login
-userInput=User ID
-passwordInput=Password
-submitButton=Login
-messageToast=Fill the form
-loginFail=Your User ID or your password are not correct.\nPlease try again.
+#Main Tile
+tileHeader=Products Management
+tileSubheader=Enter to the app
 
 #Products table 
 addProductsDialogTitle=Add Product
@@ -54,6 +51,6 @@ homeIconTooltip=Click to go back
 
 #Footer
 footerTitle=Products Management
-footerLogin=Login
 footerProductsList=Products List
 footerProductsDetail=Product Detail
+footerMain=Main 
