--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -3,10 +3,9 @@ appTitle=Gestión de Productos
 appDescription=aplicación open sap
 title=Gestión de Productos
 
-#Login
-userInput=ID de usuario
-passwordInput=Contraseña
-submitButton=Iniciar sesión
+#Main Tile
+tileHeader=Gestión de Productos
+tileSubheader=Entrar a la aplicación
 
 #Products table 
 addProductsDialogTitle=Añadir Producto
@@ -52,6 +51,6 @@ homeIconTooltip=Click para navegar hacia atrás
 
 #Footer
 footerTitle=Gestión de Productos
-footerLogin=Iniciar Sesión
 footerProductsList=Lista de Productos
 footerProductsDetail=Detalle de Producto
+footerMain=Principal
