--- a/webapp/i18n/i18n_es.properties
+++ b/webapp/i18n/i18n_es.properties
@@ -17,6 +17,7 @@ addProductPopoverButton=Añadir
 cancelPopoverButton=Cancelar
 productsListTitle=Lista de Productos
 noDataText=No hay productos predefinidos
+filterIconTooltip=FILTRAR
 
 #Products table filters
 productNameFilter=Filtrar por nombre de producto
@@ -40,6 +41,9 @@ vendorEmail=E-mail
 vendorZipCode=Código Postal
 iconTabFilterAddProduct=Información del Producto
 iconTabFilterAddSupplier=Información del Proveedor
+fileUploaderTooltip=CARGA UN DOCUMENTO EXCEL
+fileUploaderText=Cargar
+fileUploaderLabel=Documento Excel de Ventas
 
 #Detail product view
 iconTabFilterSupplier=Proveedor
@@ -47,7 +51,8 @@ iconTabFilterSales=Ventas
 supplierContactTitle=Contacto
 supplierAddressTitle=Dirección
 graphHeader=Configuración
-homeIconTooltip=Click para navegar hacia atrás
+homeIconTooltip=CLICK PARA NAVEGAR HACIA ATRÁS
+vizFrameTitle=Ventas por meses
 
 #Footer
 footerTitle=Gestión de Productos
