--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -17,6 +17,7 @@ addProductPopoverButton=Add
 cancelPopoverButton=Cancel
 productsListTitle=Products List
 noDataText=There are not predefined products
+filterIconTooltip=FILTER
 
 #Products table filters
 productNameFilter=Product name filter
@@ -40,6 +41,9 @@ vendorEmail=E-mail
 vendorZipCode=Zip-Code
 iconTabFilterAddProduct=Product Information
 iconTabFilterAddSupplier=Supplier Information
+fileUploaderTooltip=UPLOAD EN EXCEL FILE
+fileUploaderText=Upload
+fileUploaderLabel=Sales Excel file
 
 #Detail product view
 iconTabFilterSupplier=Supplier
@@ -47,7 +51,8 @@ iconTabFilterSales=Sales
 supplierContactTitle=Contact
 supplierAddressTitle=Address
 graphHeader=Settings
-homeIconTooltip=Click to go back
+homeIconTooltip=CLICK TO GO BACK
+vizFrameTitle=Sales per months
 
 #Footer
 footerTitle=Products Management
